global.css --- prevent right-column bleeding over central image on front page

--- a/drupal/sites/all/themes/omega_de/css/global.css
+++ b/drupal/sites/all/themes/omega_de/css/global.css
@@ -31,6 +31,15 @@ body {
 #breadcrumb {
   display:none;
 }
+/* full width for central image 
+ * this prevents the right-sidebar bleeding over the central image
+ */
+.front #region-content {
+  width:580px;
+}
+.front aside .grid-3 {
+  width:280px;
+}
 /* language switcher dropdown
  * comes from lang_dropdown module
  */
